force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/Techno_Attribute_Price_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Techno Attribute Price Rule</label>
    <pluralLabel>Techno Attribute Price Rules</pluralLabel>
</CustomObject>