force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentType__c</fullName>
    <description>Either "Amount" (flat dollar delta) or "Percent" (percentage of base price). Defaults to Amount.</description>
    <label>Adjustment Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>