force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/AdjustmentValue__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentValue__c</fullName>
    <description>Numeric adjustment. If AdjustmentType is "Amount", this is added to UnitPrice in dollars. If "Percent", it is treated as a percentage of base price.</description>
    <label>Adjustment Value</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>