force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/AttributeDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>AttributeDefinitionId__c</fullName>
    <description>AttributeDefinition.Id this rule keys on (matched against QuoteLineItemAttribute.AttributeDefinitionId at runtime).</description>
    <label>Attribute Definition Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>