force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/AttributeName__c.field-meta.xml
<CustomField>
    <fullName>AttributeName__c</fullName>
    <description>Human-readable attribute name (e.g. "Memory", "Storage"), for traceability.</description>
    <label>Attribute Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>