force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>AttributeValue__c</fullName>
    <description>The exact AttributePicklistValue.Value (NOT DisplayValue) this rule triggers on. Must match QuoteLineItemAttribute.AttributeValue exactly.</description>
    <label>Attribute Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>