force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If false, the rule is ignored at runtime (use this to disable a rule without deleting the metadata record).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>