force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Human-readable product identifier (Product2.ProductCode), for traceability when scanning metadata records.</description>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>