force-app/main/default/objects/Techno_Attribute_Price_Rule__mdt/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>Salesforce Product2 Id (the bundle product) this rule applies to.</description>
    <label>Product Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>